--- a/Ganedata.Warehouse.PropertiesSyncServiceTester/App.config
+++ b/Ganedata.Warehouse.PropertiesSyncServiceTester/App.config
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
     <add key="WarehouseStoreBaseUri" value="http://localhost:8005/" />
     <add key="WarehouseSyncSiteID" value="4" />
     <add key="WarehouseSyncIntervalSeconds" value="300" />
     <add key="ExitOnSingleRun" value="True" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -16,7 +17,6 @@
   <connectionStrings>
     <!--<add name="SyncDataDbContext" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=HivePropertiesSync;Integrated Security=true;MultipleActiveResultSets=True" />
     <add name="PropertiesSyncEntities" connectionString="metadata=res://*/Entities.PropertiesSyncEntities.csdl|res://*/Entities.PropertiesSyncEntities.ssdl|res://*/Entities.PropertiesSyncEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=WinManProps;Integrated Security=true;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-
     <add name="SyncDataDbContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2;Initial Catalog=HiveSync_Site4;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True" />
     <add name="PropertiesSyncEntities" connectionString="metadata=res://*/Entities.PropertiesSyncEntities.csdl|res://*/Entities.PropertiesSyncEntities.ssdl|res://*/Entities.PropertiesSyncEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=DEVELOPMENT-PC2;initial catalog=WinManSQLData002;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
@@ -56,4 +56,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
